--- a/telaDaArte.html
+++ b/telaDaArte.html
@@ -21,21 +21,21 @@
 
         <header id="topHeader">
 
-            <a href="indexTest.html"><img src="img/digital-art.png" class="float-center mx-auto d-block img-fluid"
+            <a href="index.html"><img src="img/digital-art.png" class="float-center mx-auto d-block img-fluid"
                     width="100" height="100"></a>
             <h1 class="textColor">ArtPoint Digital</h1>
             <p class="textColor">A casa da arte digital!</p>
             <br>
 
             <nav class="navbar sticky-top navbar-expand-lg navbar-light " style="background-color: #6b6b6b;">
-                <a href="indexTest.html"> <img src="img/digital-art.png" alt="Logo" style="width:40px;"></a>
+                <a href="index.html"> <img src="img/digital-art.png" alt="Logo" style="width:40px;"></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="collapsibleNavbar">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="indexTest.html">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
                             <a class="nav-link" href="login.html">Login</a>
